# freewtp

./: .autom4te.cfg  .gitignore  .hgignore  AUTHORS  COPYING  INSTALL  LICENSING  Makefile.am  NEWS.md  README.md  configure.ac  version.m4
conf/: ac.conf  ac.crt  ac.key  ca.crt  wtp.conf  wtp.crt  wtp.key
docker-build/: Dockerfile  dot-lede-config  update.sh
docs/: GPSACP.md
etc/: ac.conf  ac.crt  wtp.conf
kernel-patches/: mac80211_packet_tunnel-linux-4.4.patch  mac80211_packet_tunnel-linux-4.8.patch
kmod/: Makefile  main.c  netlinkapp.c  netlinkapp.h  nlsmartcapwap.h
lib/: Makefile.am  array.c  array.h  capwap.c  capwap.h  debug.c  dtls.c  dtls.h  element.c  element.h  element_80211_addwlan.c  element_80211_antenna.c  element_80211_assignbssid.c  element_80211_assignbssid.h  element_80211_deletewlan.c  element_80211_deletewlan.h  element_80211_directsequencecontrol.c  element_80211_directsequencecontrol.h  element_80211_ie.c  element_80211_ie.h  element_80211_mac_profile.c  element_80211_mac_profile.h  element_80211_macoperation.c  element_80211_miccountermeasures.c  element_80211_multidomaincapability.c  element_80211_ofdmcontrol.c  element_80211_rateset.c  element_80211_rsnaerrorreport.c  element_80211_station.c  element_80211_stationkey.c  element_80211_stationqos.c  element_80211_stationqos.h  element_80211_statistics.c  element_80211_supported_mac_profiles.c  element_80211_supported_mac_profiles.h  element_80211_supportedrates.c  element_80211_supportedrates.h  element_80211_txpower.c  element_80211_txpower.h  element_80211_txpowerlevel.c  (+99 more)
openwrt/: Makefile
openwrt/files/: wtp.conf  wtp.crt  wtp.key
openwrt/freewtp/: Makefile
openwrt/freewtp/files/: wtp.config  wtp.init
openwrt/luci-app-freewtp/: Makefile
openwrt/luci-app-freewtp/luasrc/controller/: freewtp.lua
openwrt/luci-app-freewtp/luasrc/model/cbi/freewtp/: freewtp.lua
openwrt/mac80211_patches/: 922-mac80211_packet_tunnel-linux-4.4.patch  922-mac80211_packet_tunnel-linux-4.8.patch  922-mac80211_packet_tunnel.patch  package-config-option.patch  rebuild-patches.sh
openwrt/mac80211_patchs/: 920-mac80211_packet_tunnel.patch  922-mac80211_packet_tunnel.patch
src/: Makefile.am  dfa.c  dfa.h  dfa_configure.c  dfa_datacheck.c  dfa_discovery.c  dfa_dtls.c  dfa_idle.c  dfa_imagedata.c  dfa_join.c  dfa_reset.c  dfa_run.c  dfa_sulking.c  element_helper.c  kmod.c  radio.c  wtp.c  wtp.h
src/ac/: ac.c  ac.h  ac_80211_json.c  ac_80211_json_addwlan.c  ac_80211_json_addwlan.h  ac_80211_json_antenna.c  ac_80211_json_antenna.h  ac_80211_json_assignbssid.c  ac_80211_json_assignbssid.h  ac_80211_json_deletewlan.c  ac_80211_json_deletewlan.h  ac_80211_json_directsequencecontrol.c  ac_80211_json_directsequencecontrol.h  ac_80211_json_ie.c  ac_80211_json_ie.h  ac_80211_json_macoperation.c  ac_80211_json_macoperation.h  ac_80211_json_miccountermeasures.c  ac_80211_json_miccountermeasures.h  ac_80211_json_multidomaincapability.c  ac_80211_json_multidomaincapability.h  ac_80211_json_ofdmcontrol.c  ac_80211_json_ofdmcontrol.h  ac_80211_json_rateset.c  ac_80211_json_rateset.h  ac_80211_json_rsnaerrorreport.c  ac_80211_json_rsnaerrorreport.h  ac_80211_json_statistics.c  ac_80211_json_statistics.h  ac_80211_json_supportedrates.c  ac_80211_json_supportedrates.h  ac_80211_json_txpower.c  ac_80211_json_txpower.h  ac_80211_json_txpowerlevel.c  ac_80211_json_txpowerlevel.h  ac_80211_json_updatewlan.c  ac_80211_json_updatewlan.h  ac_80211_json_wtpqos.c  ac_80211_json_wtpqos.h  ac_80211_json_wtpradioconf.c  (+29 more)
src/ac/kmod/: Makefile  capwap.c  capwap.h  capwap_private.c  capwap_private.h  capwap_rfc.h  config.h  iface.c  iface.h  main.c  netlinkapp.c  netlinkapp.h  nlsmartcapwap.h  socket.c  socket.h  station.c  station.h
src/binding/ieee80211/: ieee80211.c  ieee80211.h  netlink_link.c  netlink_link.h  wifi_drivers.c  wifi_drivers.h  wifi_nl80211.c  wifi_nl80211.h
src/binding/wifi/ap/common/: ieee802_11.h  ieee802_11_common.c
src/binding/wifi/drivers/: wifi_drivers.c  wifi_drivers.h  wifi_nl80211.c  wifi_nl80211.h
src/common/: capwap.c  capwap.h  capwap_array.c  capwap_array.h  capwap_debug.c  capwap_debug.h  capwap_dfa.c  capwap_dfa.h  capwap_dtls.c  capwap_dtls.h  capwap_element.c  capwap_element.h  capwap_element_80211_addwlan.c  capwap_element_80211_addwlan.h  capwap_element_80211_antenna.c  capwap_element_80211_antenna.h  capwap_element_80211_assignbssid.c  capwap_element_80211_assignbssid.h  capwap_element_80211_deletewlan.c  capwap_element_80211_deletewlan.h  capwap_element_80211_directsequencecontrol.c  capwap_element_80211_directsequencecontrol.h  capwap_element_80211_ie.c  capwap_element_80211_ie.h  capwap_element_80211_mac_profile.c  capwap_element_80211_macoperation.c  capwap_element_80211_macoperation.h  capwap_element_80211_miccountermeasures.c  capwap_element_80211_miccountermeasures.h  capwap_element_80211_multidomaincapability.c  capwap_element_80211_multidomaincapability.h  capwap_element_80211_ofdmcontrol.c  capwap_element_80211_ofdmcontrol.h  capwap_element_80211_rateset.c  capwap_element_80211_rateset.h  capwap_element_80211_rsnaerrorreport.c  capwap_element_80211_rsnaerrorreport.h  capwap_element_80211_station.c  capwap_element_80211_station.h  capwap_element_80211_stationkey.c  (+153 more)
src/common/binding/ieee80211/: ieee80211.c  ieee80211.h
src/kmod/: capwap-trace.h  capwap.h  capwap_private.h  config.h  netlinkapp.c  netlinkapp.h  nlsmartcapwap.h
src/wtp/: wtp.c  wtp.h  wtp_dfa.c  wtp_dfa.h  wtp_dfa_configure.c  wtp_dfa_datacheck.c  wtp_dfa_discovery.c  wtp_dfa_dtls.c  wtp_dfa_idle.c  wtp_dfa_imagedata.c  wtp_dfa_join.c  wtp_dfa_reset.c  wtp_dfa_run.c  wtp_dfa_sulking.c  wtp_element_helper.c  wtp_kmod.c  wtp_kmod.h  wtp_radio.c  wtp_radio.h
src/wtp/binding/ieee80211/: netlink_link.c  netlink_link.h  wifi_drivers.c  wifi_drivers.h  wifi_nl80211.c  wifi_nl80211.h
src/wtp/kmod/: Makefile  capwap.c  capwap.h  capwap_private.c  capwap_private.h  capwap_rfc.h  config.h  main.c  netlinkapp.c  netlinkapp.h  nlsmartcapwap.h  socket.c  socket.h
webservice/: smartcapwap.wsdl
